Update WrapperDownloader to accept java 22 and correct deprecated new URL API #13458